# cpp-backend-api

./: .gitignore  CMakeLists.txt  CalcResourceFactory.cpp  CalcService.cpp  CalcServiceSettingsFactory.cpp  README.md  RESTBED_EXAMPLE.MD  calcResourceFactory.h  iResourceFactory.h  main.cpp
backend/: iResourceFactory.h  rsd.cpp
include/: CalcResourceFactory.h  CalcService.h  CalcServiceSettingsFactory.h  IResourceFactory.h  IService.h  IServiceSettingsFactory.h
mysqltest/: CMakeLists.txt  buildfile.bat  main.cpp  main_bkup.cpp
oldFiles/: CalcResourceFactory.cpp
